add changes to my assignment 2

--- a/assignments/assignment_2/assignment_2_Mike_Hua.ipynb
+++ b/assignments/assignment_2/assignment_2_Mike_Hua.ipynb
@@ -79,17 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "45fcfd00",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[2, 4, 6, 8]"
+       "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,13 +107,22 @@
    "source": [
     "list_int = list(range(1,10,1))\n",
     "\n",
-    "def only_even(ls):\n",
-    "    ''' Takes a list of numbers and returns a list containing only the even numbers \n",
-    "    Only intended to work with lists of integers, not floats.'''\n",
+    "# def only_even(ls):\n",
+    "#     ''' Takes a list of numbers and returns a list containing only the even numbers \n",
+    "#     Only intended to work with lists of integers, not floats.'''\n",
     "    \n",
-    "    return [num for num in ls if num % 2 == 0]\n",
+    "#     return [num for num in ls if num % 2 == 0]\n",
     "\n",
-    "only_even(list_int)"
+    "# only_even(list_int)\n",
+    "\n",
+    "def only_even2(ls):\n",
+    "    result_list = []\n",
+    "    for num in ls:\n",
+    "        if num % 2 == 1:\n",
+    "            result_list.append(num)\n",
+    "    return result_list\n",
+    "\n",
+    "only_even2(list_int)"
    ]
   },
   {
